Don't start image recalculation when layer-locked property is changed

BUG:458471